--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.4.x",
+    "express": "~3.4.6",
     "lodash": "~2.0.0",
     "q": "0.9.7",
     "async": "0.2.9",
@@ -12,6 +12,7 @@
     "streamline": "0.10.x",
     "bluebird": "0.10.x",
     "co": "2.3.x",
-    "galaxy": "~0.1.3"
+    "galaxy": "~0.1.3",
+    "apk-parser": "~0.1.0"
   }
 }
