--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
     "bluebird": "0.10.x",
     "co": "2.3.x",
     "galaxy": "~0.1.3",
-    "apk-parser": "~0.1.0"
+    "apk-parser": "~0.1.0",
+    "im-cache": "0.0.2",
+    "directory-watcher": "~1.0.1",
+    "directory-cache": "~1.0.4"
   }
 }
