--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "apk-parser": "~0.1.0",
     "im-cache": "0.0.2",
     "directory-watcher": "~1.0.1",
-    "directory-cache": "~1.0.4"
+    "directory-cache": "~1.0.4",
+    "mime": "~1.2.11",
+    "mu2": "~0.5.20",
+    "proto-typer": "~0.2.2"
   }
 }
