--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mime": "~1.2.11",
     "mu2": "~0.5.20",
     "proto-typer": "~0.2.2",
-    "findit": "~1.1.0"
+    "findit": "~1.1.0",
+    "pouchdb": "~1.0.0"
   }
 }
