--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
-    "express": "~3.4.6",
+    "express": "3.4.7",
     "lodash": "~2.0.0",
     "q": "0.9.7",
     "async": "0.2.9",
@@ -21,6 +21,11 @@
     "mu2": "~0.5.20",
     "proto-typer": "~0.2.2",
     "findit": "~1.1.0",
-    "pouchdb": "~1.0.0"
+    "pouchdb": "~1.0.0",
+    "json-filter": "0.0.1",
+    "expect.js": "~0.2.0",
+    "superagent": "~0.15.7",
+    "mocha": "~1.16.2",
+    "koa": "~0.2.1"
   }
 }
