--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "koa-compress": "~1.0.0",
     "koa-etag": "~1.2.2",
     "koa-static-cache": "~1.0.2",
-    "koa-static": "~1.4.2"
+    "koa-static": "~1.4.2",
+    "moment": "~2.5.1"
   }
 }
