--- a/client2/config.json
+++ b/client2/config.json
@@ -132,7 +132,8 @@
         { "uri" : "./resource/${APPLICATION_CSS}" }
       ],
       "add-script" : [
-        { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/moment.js" }
+        { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/moment.js" },
+        { "uri" : "./resource/${APPLICATION}/promiscuous-browser.js" }
       ]
     },
 
@@ -145,7 +146,8 @@
         { "uri" : "./resource/${APPLICATION_CSS}" }
       ],
       "add-script" : [
-        { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/moment.js" }
+        { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/moment.js" },
+        { "uri" : "./resource/${APPLICATION}/promiscuous-browser.js" }
       ]
     },
 
@@ -155,7 +157,10 @@
       {
         "files" :
         [
-          "${APPLICATION}/bower_components/momentjs/moment.js"
+          "${APPLICATION}/bower_components/momentjs/moment.js",
+          "${APPLICATION}/*.js", 
+          "${APPLICATION}/favicon.*", 
+          "${APPLICATION}/*.png" 
         ],
 
         "source" : "${ROOT}/source/resource",
