--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,8 @@
     "koa-etag": "~1.2.2",
     "koa-static-cache": "~1.0.2",
     "koa-static": "~1.4.2",
-    "moment": "~2.5.1"
+    "moment": "~2.5.1",
+    "glob": "~3.2.8",
+    "find": "~0.1.5"
   }
 }
