--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "koa-static": "~1.4.2",
     "moment": "~2.5.1",
     "glob": "~3.2.8",
-    "find": "~0.1.5"
+    "find": "~0.1.5",
+    "koa-send": "~1.2.3"
   }
 }
