--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
+# Created by http://gitignore.io
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+### Node ###
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules
+
+### SublimeText ###
+# SublimeText project files
+*.sublime-workspace
+client2/source/script/
+client2/build/
+client2/cache/
 client-web/source/script/
+client-web/build/
