--- a/server/package.json
+++ b/server/package.json
@@ -3,45 +3,27 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
-    "lodash": "~2.0.0",
-    "q": "~0.9.7",
-    "co": "~2.3.0",
-    "apk-parser": "~0.1.0",
-    "im-cache": "0.0.2",
-    "mime": "~1.2.11",
-    "mu2": "~0.5.20",
-    "findit": "~1.1.0",
-    "json-filter": "0.0.1",
-    "expect.js": "~0.2.0",
-    "superagent": "~0.15.7",
-    "mocha": "~1.16.2",
-    "koa": "~0.5.2",
-    "koa-router": "~3.1.2",
-    "sutro": "~1.0.0",
-    "thunkify": "0.0.1",
-    "co-fs": "~1.1.1",
-    "adm-zip": "~0.4.3",
-    "plist": "~0.4.3",
-    "bplist-parser": "0.0.4",
-    "zip": "~1.1.1",
-    "koa-compress": "~1.0.0",
-    "koa-etag": "^1.2.3",
-    "koa-static-cache": "~1.0.2",
-    "koa-static": "~1.4.2",
-    "moment": "~2.5.1",
-    "glob": "~3.2.8",
-    "find": "~0.1.5",
-    "koa-send": "~1.2.3",
-    "winston": "~0.7.2",
-    "optimist": "~0.6.1",
-    "minimist": "0.0.8",
-    "assert": "~1.1.1",
-    "co-walk": "0.0.2",
+    "lodash": "^2.4.1",
+    "apk-parser": "^0.1.0",
+    "koa": "^0.5.2",
+    "koa-router": "^3.1.2",
+    "co-fs": "^1.2.0",
+    "bplist-parser": "^0.0.5",
+    "zip": "^1.1.1",
+    "moment": "^2.5.1",
+    "koa-send": "^1.2.3",
+    "minimist": "^0.0.8",
+    "assert": "^1.1.1",
+    "co-walk": "^0.0.2",
     "unglob": "^0.1.1",
     "co-each": "^0.1.0",
-    "debug": "^0.7.4"
+    "debug": "^0.7.4",
+    "lru-cache": "^2.5.0",
+    "mustache": "^0.8.1"
   },
   "devDependencies": {
-    "co-mocha": "0.0.2"
+    "co-mocha": "0.0.2",
+    "superagent": "~0.15.7",
+    "co": "^3.0.5"
   }
 }
