--- a/client-web/config.json
+++ b/client-web/config.json
@@ -133,7 +133,7 @@
       ],
       "add-script" : [
         { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/min/moment.min.js" },          
-     //   { "uri" : "./resource/${APPLICATION}/bower_components/q/q.js" },        
+        { "uri" : "./resource/${APPLICATION}/bower_components/lodash/dist/lodash.min.js" },        
         { "uri" : "./resource/${APPLICATION}/promiscuous-browser.js" }
       ]
     },
@@ -148,7 +148,7 @@
       ],
       "add-script" : [
         { "uri" : "./resource/${APPLICATION}/bower_components/momentjs/min/moment.min.js" }, 
-      // { "uri" : "./resource/${APPLICATION}/bower_components/q/q.js" },        
+       { "uri" : "./resource/${APPLICATION}/bower_components/lodash/dist/lodash.min.js" },        
         { "uri" : "./resource/${APPLICATION}/promiscuous-browser.js" }
       ]
     },
@@ -160,7 +160,7 @@
         "files" :
         [
           "${APPLICATION}/bower_components/momentjs/min/moment.min.js",
-        //  "${APPLICATION}/bower_components/q/q.js",
+          "${APPLICATION}/bower_components/lodash/dist/lodash.min.js",
           "${APPLICATION}/*.js", 
           "${APPLICATION}/favicon.*", 
           "${APPLICATION}/*.png" 
