--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "debug": "^0.7.4",
     "lru-cache": "^2.5.0",
     "mustache": "^0.8.1",
-    "thunkify": "0.0.1"
+    "thunkify": "0.0.1",
+    "koa-ssl" : "1.0.1"
   },
   "devDependencies": {
     "co-mocha": "0.0.2",
