--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "lru-cache": "^2.5.0",
     "mustache": "^0.8.1",
     "thunkify": "0.0.1",
-    "koa-ssl" : "1.0.1"
+    "co-views": "~0.2.0",
+    "swig": "~1.3.2"
   },
   "devDependencies": {
     "co-mocha": "0.0.2",
